# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.old  pyproject.toml  sonar-project.properties
.github/workflows/: sonarcloud.yml
page_analyzer/: app.py  db.py
page_analyzer/templates/: index.html  url.html  urls.html
