[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
authors = [
    {name = "asankheya",email = "lilitasa@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "page_analyzer" }
]