[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer - Check websites for SEO suitability"
authors = [
    { name = "asankheya", email = "lilitasa@proton.me" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "validators>=0.34.0",
    "beautifulsoup4>=4.13.3"
]

[tool.uv]
dev-dependencies = [
    "flake8>=7.0.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0"
]

[tool.hatch.build.targets.sdist]
include = ["page_analyzer"]

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"